# lazydate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lazydate/: __init__.py  parser.py
lazydate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lazydate/data_generation/: config.py  data_generation.py
lazydate/model/: config.py  generator.py  model.py  vectorizer.py
lazydate/models/: __init__.py  date_model.py  generator.py  model.py  tf_model.py  tf_utils.py  vectorizer.py
notebooks/: data_generator.ipynb  dev_notebook.ipynb  training.ipynb
notebooks/.ipynb_checkpoints/: data_generator-checkpoint.ipynb  dev_notebook-checkpoint.ipynb
saved_models/: checkpoint  lstm_date_model_v01.data-00000-of-00001  lstm_date_model_v01.index  lstm_date_model_v02.data-00000-of-00001  lstm_date_model_v02.index  lstm_date_model_v04.data-00000-of-00001  lstm_date_model_v04.index  lstm_date_model_v05.data-00000-of-00001  lstm_date_model_v05.index
tests/: test_lazydate.py
