[tool.poetry]
name = "lazydate"
version = "0.1.0"
description = ""
authors = ["daniel <daniel@evolution.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.5"
ipykernel = "^5.3.2"
numpy = "^1.19.0"
pandas = "^1.0.5"
matplotlib = "^3.2.2"
tensorflow = "^2.2.0"
sklearn = "^0.0"
babel = "^2.8.0"
nlpaug = "^0.0.14"
Random-Word = "^1.0.4"
nltk = "^3.5"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"
isort = "^5.4.2"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
